--- a/src/app/biller/create-credit-biller/create-credit-biller.component.html
+++ b/src/app/biller/create-credit-biller/create-credit-biller.component.html
@@ -33,54 +33,68 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            <mat-form-field appearance="fill" *ngIf="setting.showEmitionAt">
-                <mat-label>Fecha de emision</mat-label>
-                <input matInput [matDatepicker]="picker" formControlName="emitionAt">
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
-            <mat-form-field appearance="fill" *ngIf="setting.showSpecialty">
-                <mat-label>Especialidad</mat-label>
-                <mat-select formControlName="specialtyId">
-                    <mat-option *ngFor="let specialty of specialties" [value]="specialty._id">
-                        {{ specialty.name | uppercase }}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="fill" *ngIf="setting.showWorker">
-                <mat-label>Personal a cargo</mat-label>
-                <mat-select formControlName="workerId">
-                    <mat-option *ngFor="let worker of workers" [value]="worker._id">
-                        {{ worker.name | uppercase }}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="fill" *ngIf="setting.showReferred">
-                <mat-label>Referido por</mat-label>
-                <mat-select formControlName="referredId">
-                    <mat-option *ngFor="let worker of workers" [value]="worker._id">
-                        {{ worker.name | uppercase }}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="fill" *ngIf="setting.showTotalDiscount">
-                <mat-label>Descuento global</mat-label>
-                <input type="number" matInput formControlName="discount" (input)="onChangeDiscount()">
-            </mat-form-field>
-            <mat-form-field appearance="fill" *ngIf="setting.showCurrencyCode">
-                <mat-label>Moneda</mat-label>
-                <mat-select formControlName="currencyCode">
-                    <mat-option value="PEN">SOLES</mat-option>
-                    <mat-option value="USD">DOLARES</mat-option>
-                </mat-select>
-            </mat-form-field>
+            @if (setting.showEmitionAt) {
+                <mat-form-field appearance="fill">
+                    <mat-label>Fecha de emision</mat-label>
+                    <input matInput [matDatepicker]="picker" formControlName="emitionAt">
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
+            }
+            @if (setting.showSpecialty) {
+                <mat-form-field appearance="fill">
+                    <mat-label>Especialidad</mat-label>
+                    <mat-select formControlName="specialtyId">
+                        <mat-option *ngFor="let specialty of specialties" [value]="specialty._id">
+                            {{ specialty.name | uppercase }}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            }
+            @if (setting.showWorker) {
+                <mat-form-field appearance="fill">
+                    <mat-label>Personal a cargo</mat-label>
+                    <mat-select formControlName="workerId">
+                        <mat-option *ngFor="let worker of workers" [value]="worker._id">
+                            {{ worker.name | uppercase }}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            }
+            @if (setting.showReferred) {
+                <mat-form-field appearance="fill">
+                    <mat-label>Referido por</mat-label>
+                    <mat-select formControlName="referredId">
+                        <mat-option *ngFor="let worker of workers" [value]="worker._id">
+                            {{ worker.name | uppercase }}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            }
+            @if (setting.showTotalDiscount) {
+                <mat-form-field appearance="fill">
+                    <mat-label>Descuento global</mat-label>
+                    <input type="number" matInput formControlName="discount" (input)="onChangeDiscount()">
+                </mat-form-field>
+            }
+            @if (setting.showCurrencyCode) {
+                <mat-form-field appearance="fill">
+                    <mat-label>Moneda</mat-label>
+                    <mat-select formControlName="currencyCode">
+                        <mat-option value="PEN">SOLES</mat-option>
+                        <mat-option value="USD">DOLARES</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            }
             <mat-form-field appearance="fill">
                 <mat-label>Observaciones</mat-label>
                 <input type="text" matInput formControlName="observations" [autofocus]>
             </mat-form-field>
-            <div class="py-3" *ngIf="setting.showIsRetainer">
-                <mat-slide-toggle formControlName="isRetainer">Es agente retenedor</mat-slide-toggle>
-            </div>
+            @if (setting.showIsRetainer) {
+                <div class="py-3">
+                    <mat-slide-toggle formControlName="isRetainer">Es agente retenedor</mat-slide-toggle>
+                </div>
+            }
             <button type="button" class="w-100" mat-flat-button [disabled]="isLoading" color="primary"
                 (click)="onSubmit()">
                 GUARDAR
