--- a/src/app/biller/index-biller/index-biller.component.html
+++ b/src/app/biller/index-biller/index-biller.component.html
@@ -1,6 +1,10 @@
 <div class="container">
-  <div class="my-5">
-    <button type="button" mat-flat-button routerLink="/biller/create" color="primary" class="w-100 mb-3">EMITIR AL CONTADO</button>
-    <button type="button" mat-flat-button routerLink="/biller/createCredit" color="primary" class="w-100">EMITIR AL CREDITO</button>
-  </div>
+    <div class="my-5">
+        <button type="button" mat-flat-button routerLink="/biller/create" color="primary" class="w-100 mb-3">
+            EMITIR AL CONTADO
+        </button>
+        <button type="button" mat-flat-button routerLink="/biller/createCredit" color="primary" class="w-100">
+            EMITIR AL CREDITO
+        </button>
+    </div>
 </div>
