--- a/src/app/biller/edit-biller/edit-biller.component.html
+++ b/src/app/biller/edit-biller/edit-biller.component.html
@@ -9,8 +9,7 @@
                 <span class="mat-h1">{{ customer.name | uppercase }}</span>
             </button>
             <p class="text-center mb-3">{{ customer.mobileNumber }}</p>
-            }
-            <mat-form-field appearance="fill" *ngIf="customer">
+            <mat-form-field appearance="fill">
                 <mat-label>Direccion</mat-label>
                 <mat-select formControlName="addressIndex">
                     <mat-option *ngFor="let element of addresses; let i = index" [value]="i">
@@ -18,6 +17,7 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
+            }
             <mat-form-field appearance="fill">
                 <mat-label>Comprobante</mat-label>
                 <mat-select formControlName="invoiceType">
@@ -77,7 +77,7 @@
             </mat-form-field>
             <mat-form-field appearance="fill">
                 <mat-label>Observaciones</mat-label>
-                <input type="text" matInput formControlName="observations">
+                <input type="text" matInput formControlName="observations" [autofocus]>
             </mat-form-field>
             <button type="button" class="w-100" mat-flat-button [disabled]="isLoading" color="primary"
                 (click)="onSubmit()">
