--- a/src/app/purchases/dialog-detail-purchases/dialog-detail-purchases.component.html
+++ b/src/app/purchases/dialog-detail-purchases/dialog-detail-purchases.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title class="mb-0">Detalles compra {{ purchase?.serie }}</h2>
+<h2 mat-dialog-title>Detalles compra {{ purchase?.serie }}</h2>
 <div mat-dialog-content>
     <mat-list class="m-0">
         @for (purchaseItem of purchaseItems; track purchaseItem._id) {
@@ -53,8 +53,8 @@
     </mat-list>
 </div>
 <mat-dialog-actions>
-    <button mat-raised-button (click)="onDeletePurchase()" color="warn">ELIMINAR</button>
-    <button mat-raised-button mat-dialog-close [routerLink]="['/purchases', purchaseId, 'edit']"
+    <button mat-flat-button (click)="onDeletePurchase()" color="warn">ELIMINAR</button>
+    <button mat-flat-button mat-dialog-close [routerLink]="['/purchases', purchaseId, 'edit']"
         color="primary">EDITAR</button>
     <span class="spacer"></span>
     <button mat-raised-button mat-dialog-close color="primary">VOLVER</button>
