--- a/src/app/banks/create-banks/create-banks.component.html
+++ b/src/app/banks/create-banks/create-banks.component.html
@@ -7,6 +7,7 @@
                 <mat-option value="BBVA">BBVA</mat-option>
                 <mat-option value="INTERBANK">INTERBANK</mat-option>
                 <mat-option value="SCOTIABANK">SCOTIABANK</mat-option>
+                <mat-option value="BANCO DE LA NACION">BANCO DE LA NACION</mat-option>
             </mat-select>
         </mat-form-field>
         <mat-form-field appearance="fill">
