--- a/src/app/payment-methods/disabled-payment-methods/disabled-payment-methods.component.html
+++ b/src/app/payment-methods/disabled-payment-methods/disabled-payment-methods.component.html
@@ -16,6 +16,10 @@
                             <mat-icon>edit</mat-icon>
                             <span>Editar</span>
                         </button>
+                        <button type="button" (click)="onRestore(element)" mat-menu-item>
+                            <mat-icon>restore_from_trash</mat-icon>
+                            <span>Restaurar</span>
+                        </button>
                     </mat-menu>
                 </td>
             </ng-container>
