--- a/src/app/products/edit-products/edit-products.component.html
+++ b/src/app/products/edit-products/edit-products.component.html
@@ -93,14 +93,17 @@
             <mat-label>Costo</mat-label>
             <input type="number" matInput formControlName="cost">
         </mat-form-field>
+        @if (urlImage) {
+            <div class="text-center mb-3">
+                <img [src]="urlImage" alt="producto" width="400" class="mat-elevation-z2">
+            </div>
+            <p class="text-center text-danger">Si actualizas la imagen puede demorar hasta 1 hora en reflejarse los cambios</p>
+        }
         <div class="mb-3">
             <button type="button" mat-flat-button color="primary" (click)="fileImageInput.click()"
                 class="w-100">AGREGAR IMAGEN</button>
-            <input type="file" #fileImageInput (change)="onFileImageSelected(fileImageInput.files, fileImageInput)"
+            <input type="file" #fileImageInput accept="image/png, image/gif, image/jpeg" (change)="onFileImageSelected(fileImageInput.files, fileImageInput)"
                 hidden>
-        </div>
-        <div class="text-center" *ngIf="imgUri">
-            <img [src]="imgUri" alt="producto" width="400" class="mat-elevation-z2">
         </div>
         <mat-list>
             <div mat-subheader>Productos vinculados</div>
