--- a/src/app/customers/customers/customers.component.html
+++ b/src/app/customers/customers/customers.component.html
@@ -1,6 +1,17 @@
 <mat-tab-group animationDuration="0ms">
     <mat-tab label="Clientes">
         <div class="container">
+            <form [formGroup]="formGroup" autocomplete="off">
+                <mat-form-field appearance="fill">
+                    <mat-label>Todos los clientes</mat-label>
+                    <mat-select formControlName="documentType" (selectionChange)="onChangeDocumentType()">
+                        <mat-option value="">TODOS LOS CLIENTES</mat-option>
+                        <mat-option value="RUC">SOLO CLIENTES CON RUC</mat-option>
+                        <mat-option value="DNI">SOLO CLIENTES CON DNI</mat-option>
+                        <mat-option value="CE">SOLO CLIENTES CON CARNET DE EXTRANJERIA</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </form>
             <div class="mb-3">
                 <button type="button" class="w-100" mat-flat-button color="primary"
                     (click)="onOpenDialogProducts()">FILTRAR POR PRODUCTO/SERVICIO</button>
@@ -29,8 +40,8 @@
                     </ng-container>
                     <ng-container matColumnDef="address">
                         <th mat-header-cell *matHeaderCellDef>Direccion</th>
-                        <td mat-cell *matCellDef="let element" class="text-capitalize truncate-cell">
-                            {{ element.addresses[0] | uppercase }}
+                        <td mat-cell *matCellDef="let element" class="text-capitalize truncate-cell" [ngClass]="{ 'text-muted': !element.addresses[0] }">
+                            {{ (element.addresses[0] || 'NINGUNO') | uppercase }}
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="mobileNumber">
