--- a/src/app/pre-sales/pre-sales/pre-sales.component.html
+++ b/src/app/pre-sales/pre-sales/pre-sales.component.html
@@ -38,6 +38,10 @@
                         <button mat-button color="warn" (click)="onDelete(preSale._id)">ANULAR</button>
                         <span class="spacer"></span>
                         <button mat-button color="primary" (click)="onEdit(preSale)">EDITAR</button>
+                        <button mat-flat-button (click)="onChargeCredit(preSale)" color="primary" class="mx-0">
+                            CREDITO
+                        </button>
+                        <span class="divider"></span>
                         <button mat-flat-button (click)="onCharge(preSale)" color="primary" class="mx-0">
                             COBRAR
                         </button>
