--- a/src/app/settings/settings/settings.component.html
+++ b/src/app/settings/settings/settings.component.html
@@ -204,6 +204,11 @@
                         Mostrar codigo QR en las NOTAS DE VENTA
                     </mat-slide-toggle>
                 </div>
+                <div class="mb-4">
+                    <mat-slide-toggle formControlName="hideIgvTicket">
+                        Ocultar IGV en BOLETAS
+                    </mat-slide-toggle>
+                </div>
                 <button type="button" mat-flat-button color="primary" (click)="fileInput.click()">CARGAR LOGO</button>
                 <span class="divider"></span>
                 <button type="button" mat-flat-button color="primary" (click)="onDeleteLogo()">ELIMINAR LOGO</button>
