--- a/src/app/users/edit-users/edit-users.component.html
+++ b/src/app/users/edit-users/edit-users.component.html
@@ -28,6 +28,11 @@
                 }
             </mat-select>
         </mat-form-field>
+        <div class="mb-3">
+            <mat-slide-toggle formControlName="isAdmin">
+                Modificar ajustes
+            </mat-slide-toggle>
+        </div>
         <div class="d-flex">
             <span class="spacer"></span>
             <button type="button" mat-raised-button routerLink="/users" color="primary">CANCELAR</button>
