before migrate angular 19

--- a/src/app/products/categories/categories.component.html
+++ b/src/app/products/categories/categories.component.html
@@ -61,7 +61,7 @@
             [length]="length" (page)="handlePageEvent($event)" showFirstLastButtons></mat-paginator>
     </div>
     <div class="fixed-bottom p-3" style="right: 0; left: unset; width: auto;">
-        <button type="button" (click)="onAdd()" mat-fab color="primary" class="float-right">
+        <button type="button" (click)="onCreateCategory()" mat-fab color="primary" class="float-right">
             <mat-icon>add</mat-icon>
         </button>
     </div>
