--- a/src/app/tools/import-products/import-products.component.html
+++ b/src/app/tools/import-products/import-products.component.html
@@ -69,6 +69,13 @@
                     element[priceList.name.toLowerCase()] }}</td>
             </ng-container>
             }
+            @for (office of offices; track office._id) {
+            <ng-container [matColumnDef]="office.name">
+                <th mat-header-cell *matHeaderCellDef>{{ office.name }} (precio)</th>
+                <td mat-cell *matCellDef="let element" class="text-capitalize truncate-cell">{{
+                    element[office.name.toLowerCase()] }}</td>
+            </ng-container>
+            }
             <ng-container matColumnDef="cost">
                 <th mat-header-cell *matHeaderCellDef>P. compra</th>
                 <td mat-cell *matCellDef="let element" class="text-capitalize truncate-cell">{{ element.cost }}</td>
