--- a/src/app/incidents/create-out-incidents/create-out-incidents.component.html
+++ b/src/app/incidents/create-out-incidents/create-out-incidents.component.html
@@ -57,7 +57,7 @@
             <button type="button" mat-raised-button (click)="onCancel()" color="primary">CANCELAR</button>
             <span class="divider"></span>
             <button type="button" mat-flat-button color="primary"
-                routerLink="/incidents/chargeIncidents">RETIRAR</button>
+                routerLink="/incidents/chargeOutIncidents">GUARDAR</button>
         </div>
     </div>
 </div>
