--- a/src/app/purchase-orders/create-purchase-orders/create-purchase-orders.component.html
+++ b/src/app/purchase-orders/create-purchase-orders/create-purchase-orders.component.html
@@ -18,7 +18,7 @@
                         </small>
                         @if (product.isTrackStock) {
                         <small class="text-muted text-stock">
-                            {{ product.stock.toFixed(2) }}
+                            stock: {{ product.stock.toFixed(2) }}
                         </small>
                         }
                     </mat-grid-tile>
@@ -55,7 +55,7 @@
                         </small>
                         @if (product.isTrackStock) {
                         <small class="text-muted text-stock">
-                            {{ product.stock.toFixed(2) }}
+                            stock: {{ product.stock.toFixed(2) }}
                         </small>
                         }
                     </mat-grid-tile>
