--- a/src/app/purchase-orders/edit-purchase-orders/edit-purchase-orders.component.html
+++ b/src/app/purchase-orders/edit-purchase-orders/edit-purchase-orders.component.html
@@ -15,7 +15,7 @@
                         </small>
                         @if (product.isTrackStock) {
                         <small class="text-muted text-stock">
-                            {{ product.stock.toFixed(2) }}
+                            stock: {{ product.stock.toFixed(2) }}
                         </small>
                         }
                     </mat-grid-tile>
@@ -49,7 +49,7 @@
                         </small>
                         @if (product.isTrackStock) {
                         <small class="text-muted text-stock">
-                            {{ product.stock.toFixed(2) }}
+                            stock: {{ product.stock.toFixed(2) }}
                         </small>
                         }
                     </mat-grid-tile>
