--- a/src/app/purchases/create-purchases/create-purchases.component.html
+++ b/src/app/purchases/create-purchases/create-purchases.component.html
@@ -19,7 +19,7 @@
                         </small>
                         @if (product.isTrackStock) {
                         <small class="text-muted text-stock">
-                            {{ product.stock.toFixed(2) }}
+                            stock: {{ product.stock.toFixed(2) }}
                         </small>
                         }
                     </mat-grid-tile>
@@ -57,7 +57,7 @@
                         </small>
                         @if (product.isTrackStock) {
                         <small class="text-muted text-stock">
-                            {{ product.stock.toFixed(2) }}
+                            stock: {{ product.stock.toFixed(2) }}
                         </small>
                         }
                     </mat-grid-tile>
