--- a/src/app/tools/delete-data/delete-data.component.html
+++ b/src/app/tools/delete-data/delete-data.component.html
@@ -11,5 +11,9 @@
         <button mat-flat-button color="warn" (click)="onResetStock()">
             REINICIAR STOCK
         </button>
+        <span class="divider"></span>
+        <button mat-flat-button color="warn" (click)="onLastThreeYears()">
+            CLIENTE ULTIMOS 3 AÑOS
+        </button>
     </div>
 </div>
