--- a/src/app/incidents/out-incidents/out-incidents.component.html
+++ b/src/app/incidents/out-incidents/out-incidents.component.html
@@ -46,7 +46,7 @@
             </ng-container>
             <ng-container matColumnDef="observations">
                 <th mat-header-cell *matHeaderCellDef>Observaciones</th>
-                <td mat-cell *matCellDef="let element" [ngClass]="{ 'text-muted': !element.incident.observations }" class="text-uppercase truncate-cell">{{ element.incident.observations || 'NINGUNO' }}
+                <td mat-cell *matCellDef="let element" [ngClass]="{ 'text-muted': !element.incident?.observations }" class="text-uppercase truncate-cell">{{ element.incident?.observations || 'NINGUNO' }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="actions">
