--- a/src/app/inventories/inventories/inventories.component.html
+++ b/src/app/inventories/inventories/inventories.component.html
@@ -77,16 +77,16 @@
                 <th mat-header-cell *matHeaderCellDef>Costo</th>
                 <td mat-cell *matCellDef="let element">{{ (element.cost || 0).toFixed(2) }}</td>
             </ng-container>
-            <ng-container matColumnDef="minimumStock">
-                <th mat-header-cell *matHeaderCellDef>Stock minimo</th>
-                <td mat-cell *matCellDef="let element" [ngClass]="{ 'text-muted': !element.isTrackStock }">
-                    {{ element.isTrackStock ? (element.minimumStock || 0).toFixed(2) : 'Venta Libre' }}
-                </td>
-            </ng-container>
             <ng-container matColumnDef="stock">
                 <th mat-header-cell *matHeaderCellDef>Stock</th>
                 <td mat-cell *matCellDef="let element" [ngClass]="{ 'text-muted': !element.isTrackStock }">
                     {{ element.isTrackStock ? (element.stock || 0).toFixed(2) : 'Venta Libre' }}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="provider">
+                <th mat-header-cell *matHeaderCellDef>Proveedor</th>
+                <td mat-cell *matCellDef="let element" [ngClass]="{ 'text-muted': !element.providers[0] }">
+                    {{ element.providers[0] ? element.providers[0].name : 'NINGUNO' }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="actions">
@@ -116,6 +116,10 @@
                         <button type="button" (click)="onDeleteProduct(element._id)" mat-menu-item>
                             <mat-icon>delete</mat-icon>
                             <span>Eliminar</span>
+                        </button>
+                        <button type="button" (click)="onProvidersProduct(element.providerIds)" mat-menu-item>
+                            <mat-icon>face</mat-icon>
+                            <span>Proveedores</span>
                         </button>
                         } @else {
                         <button type="button" (click)="onTrackStock(element)" mat-menu-item>
