--- a/src/app/products/products/products.component.html
+++ b/src/app/products/products/products.component.html
@@ -79,16 +79,16 @@
                 <th mat-header-cell *matHeaderCellDef>Costo</th>
                 <td mat-cell *matCellDef="let element">{{ (element.cost || 0).toFixed(2) }}</td>
             </ng-container>
-            <ng-container matColumnDef="minimumStock">
-                <th mat-header-cell *matHeaderCellDef>Stock minimo</th>
-                <td mat-cell *matCellDef="let element" [ngClass]="{ 'text-muted': !element.isTrackStock }">
-                    {{ element.isTrackStock ? (element.minimumStock || 0).toFixed(2) : 'Venta Libre' }}
-                </td>
-            </ng-container>
             <ng-container matColumnDef="stock">
                 <th mat-header-cell *matHeaderCellDef>Stock</th>
                 <td mat-cell *matCellDef="let element" [ngClass]="{ 'text-muted': !element.isTrackStock }">
                     {{ element.isTrackStock ? (element.stock || 0).toFixed(2) : 'Venta Libre' }}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="provider">
+                <th mat-header-cell *matHeaderCellDef>Proveedor</th>
+                <td mat-cell *matCellDef="let element" [ngClass]="{ 'text-muted': !element.providers[0] }">
+                    {{ element.providers[0] ? element.providers[0].name : 'NINGUNO' }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="actions">
@@ -118,7 +118,7 @@
                             <mat-icon>delete</mat-icon>
                             <span>Eliminar</span>
                         </button>
-                        <button type="button" (click)="onProvidersProduct(element._id)" mat-menu-item>
+                        <button type="button" (click)="onProvidersProduct(element.providerIds)" mat-menu-item>
                             <mat-icon>face</mat-icon>
                             <span>Proveedores</span>
                         </button>
@@ -128,7 +128,8 @@
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-                [ngClass]="{ 'bg-danger': row.isTrackStock && row.stock <= 0, 'bg-warning': row.stock < row.minimumStock}"></tr>
+                [ngClass]="{ 'bg-danger': row.isTrackStock && row.stock <= 0, 'bg-warning': row.stock < row.minimumStock}">
+            </tr>
         </table>
         <mat-paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" [pageIndex]="pageIndex"
             [length]="length" (page)="handlePageEvent($event)" showFirstLastButtons></mat-paginator>
