--- a/src/app/reports/invoices/invoices.component.html
+++ b/src/app/reports/invoices/invoices.component.html
@@ -39,19 +39,33 @@
             <ng-container matColumnDef="_id">
                 <th mat-header-cell *matHeaderCellDef>Comprobante</th>
                 <td mat-cell *matCellDef="let element">{{ element._id }}</td>
+                <td mat-footer-cell *matFooterCellDef>Total</td>
             </ng-container>
             <ng-container matColumnDef="quantity">
-                <th mat-header-cell *matHeaderCellDef>T. Documentos</th>
+                <th mat-header-cell *matHeaderCellDef>Cantidad</th>
                 <td mat-cell *matCellDef="let element">{{ element.quantity }}</td>
+                <td mat-footer-cell *matFooterCellDef>{{ totalQuantity }}</td>
+            </ng-container>
+            <ng-container matColumnDef="base">
+                <th mat-header-cell *matHeaderCellDef>Base Imponible</th>
+                <td mat-cell *matCellDef="let element">{{ (element.charge - element.igv).toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 }) }}</td>
+                <td mat-footer-cell *matFooterCellDef>{{ totalBase.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 }) }}</td>
+            </ng-container>
+            <ng-container matColumnDef="igv">
+                <th mat-header-cell *matHeaderCellDef>IGV</th>
+                <td mat-cell *matCellDef="let element">{{ element.igv.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 }) }}</td>
+                <td mat-footer-cell *matFooterCellDef>{{ totalIgv.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 }) }}</td>
             </ng-container>
             <ng-container matColumnDef="charge">
                 <th mat-header-cell *matHeaderCellDef>Importe T.</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.charge.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 }) }}
                 </td>
+                <td mat-footer-cell *matFooterCellDef>{{ totalCharge.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 }) }}</td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
         </table>
     </form>
 </div>
