--- a/src/app/turns/turns/turns.component.html
+++ b/src/app/turns/turns/turns.component.html
@@ -1,6 +1,15 @@
 <div class="container">
     <form [formGroup]="formGroup" autocomplete="off">
         <mat-form-field appearance="fill">
+            <mat-label>Seleccione un rango de fechas</mat-label>
+            <mat-date-range-input [rangePicker]="picker">
+                <input matStartDate placeholder="Desde" formControlName="startDate">
+                <input matEndDate placeholder="Hasta" formControlName="endDate" (dateChange)="onRangeChange()">
+            </mat-date-range-input>
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-date-range-picker #picker></mat-date-range-picker>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
             <mat-label>Usuario</mat-label>
             <mat-select formControlName="userId" (selectionChange)="onUserChange($event.value)">
                 <mat-option value="">TODOS LOS USUARIOS</mat-option>
